--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<html><head><meta http-equiv="refresh" content="0; URL='http://new-website.com'" /></head></html>
+<html><head><meta http-equiv="refresh" content="0; URL='http://www.thearticulatemagazine.github.io/vol1/'" /></head></html>
